# rbac

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml  config.default.toml  config.toml
.pkgbuild/: PKGBUILD  rbac.service
benches/: main.rs
docker/: Dockerfile
mock/: docker-compose.yml
src/: README.md  lib.rs  main.rs
src/mods/: config.rs  gotham.rs  loader.rs  mod.rs  phpdeserializer.rs  phpdeserializer_test.rs  rbac.rs  rbac_test.rs  server.notrs  server.rs
src/tests/: mod.rs
tests/: main.rs  mod.rs
