[package]
name = "rbac"
version = "0.1.0"
authors = ["Sergey Shlykov <s.shlykov@office.ngs.ru>"]

[dependencies]
mysql = "12.0.3"
json = "0.11.12"
futures = "*"
time = "*"
toml = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
sys-info = "*"
tokio-core = "*"
log = "*"
env_logger = "*"
actix = "0.4"
actix-web = "0.3"