[package]
name = "rbac"
version = "0.1.0"
authors = ["Sergey Shlykov <s.shlykov@office.ngs.ru>"]

[dependencies]
mysql = "12.0.3"
json = "0.11.12"
futures = "0.1.17"
futures-cpupool = "0.1.6"
time = "0.1"
toml = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
sys-info = "*"
tokio-core = "0.1.11"
log = "0.4"
env_logger = "*"
hyper = "0.12"
net2 = "0.2"
num_cpus = "1.0"